# tarea1LP-2017-2-cfvillar

./: CMakeLists.txt  README.md
src/: a.c  c.c  caract_a.c  caract_c.c  caract_t.c  g.c  genetic_behaviour.c  init.txt  init.uni  main.c  t.c
